﻿Changelog:

4.5.4:

- Updated LSPDFR API to the latest version of the API
- Readded version checker
- Older versions 4.5.3 or lower will not be supported due to LSPDFR API Changes
- Updated the Rage Plugin Hook SDK reference to the latest SDK version

4.5.3:

- Added 2 New Callouts ("Purple Alert" and "Peeping Tom - SFW")
- More Dialogue Improvements
- Changed the callout probability of Dead Body callout from Low to Medium
- Minor Improvements
- Minor Adjustments
- Bug Fixes


4.4.3:

- Added "JMCallouts Audio" folder. (Most callouts rely on the audio in the folder)
- Minor adjustments to "Dead Body" callout
- More dialogue improvements
- Added 1 new callout ("Stalking")
- Minor adjustments
- Minor Bug fixes
- Changed Dead Body callout probability from "Medium" to "Low"
- Changed Domestic Disturbance and Illegal Prostitution callout probability from "High" to "Medium"
- Removed "Wreckless Driving" callout
- Added 2 new weapons in "Person On The Highway" callout
- Added 6 new peds in "Person On The Highway" callout
- Changed the code response in "Public Disturbance" callout from "Code 3" to "Code 2"
- More notification improvements
- Changed the code response in "Refuse To Leave" callout from "Code 2" to "Code 1"
- Changed the callout probability in "Illegal Campfire On Public Beach" callout from "High" to "Medium"
- Changed the code response in "Illegal Campfire On Public Beach" from "Code 3" to "Code 2"
- Changed the code response in "Soliciting" from "Code 3" to "Code 2"
- Help Messages are now set to false by default

4.3.2:

- Fixed an issue when tow truck tries to tow the vehicle when the vehicle wheels is locked (Abandoned Vehicle on Railroad Tracks callout)
- Added 3 new locations to "Abandoned Vehicle On Railroad Tracks" callout
- Minor bug fixes
- Updated Discord link (Old one no longer works)

4.3.1:

- Added 3 new vehicles to "Wreckless Driving" callout (Sovereign, Blazer3, and Bifta)